[gd_scene load_steps=18 format=3 uid="uid://bphikoydf0ttw"]

[ext_resource type="Script" path="res://scripts/tank.gd" id="1_2wvh0"]
[ext_resource type="Texture2D" uid="uid://cdyq04t67gmwr" path="res://assets/images/Objects/tankBody_huge.png" id="2_utf6n"]
[ext_resource type="Texture2D" uid="uid://d35w3srs0xqgg" path="res://assets/images/Objects/specialBarrel1.png" id="3_1732e"]
[ext_resource type="Texture2D" uid="uid://bdhge7iwjltkl" path="res://assets/images/Objects/bulletRed1.png" id="4_4jf3y"]
[ext_resource type="Texture2D" uid="uid://dtb2521hgolj2" path="res://assets/images/Objects/specialBarrel4.png" id="4_l7g60"]
[ext_resource type="Texture2D" uid="uid://bhyhibdnbxb5l" path="res://assets/images/Objects/explosion1.png" id="5_x0qgq"]
[ext_resource type="Texture2D" uid="uid://cyh2k5wn5cubg" path="res://assets/images/Objects/explosion2.png" id="6_57w40"]
[ext_resource type="Texture2D" uid="uid://cseinrinevbwa" path="res://assets/images/Objects/explosion3.png" id="7_dajwe"]
[ext_resource type="Texture2D" uid="uid://broqf56td2t7i" path="res://assets/images/Objects/explosion4.png" id="8_58y7v"]
[ext_resource type="Texture2D" uid="uid://kcbrwpsthqe0" path="res://assets/images/Objects/explosion5.png" id="9_f8lsi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_555gt"]
resource_local_to_scene = true
size = Vector2(94, 96)

[sub_resource type="CircleShape2D" id="CircleShape2D_6imrt"]
resource_local_to_scene = true
radius = 175.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nmod6"]
resource_local_to_scene = true

[sub_resource type="Animation" id="Animation_vj7jr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Health:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jjvfl"]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Barrel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Health:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31mxh"]
_data = {
"RESET": SubResource("Animation_vj7jr"),
"explosion": SubResource("Animation_jjvfl")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_tf25s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_x0qgq")
}, {
"duration": 1.0,
"texture": ExtResource("6_57w40")
}, {
"duration": 1.0,
"texture": ExtResource("7_dajwe")
}, {
"duration": 1.0,
"texture": ExtResource("8_58y7v")
}, {
"duration": 1.0,
"texture": ExtResource("9_f8lsi")
}],
"loop": false,
"name": &"explosion",
"speed": 6.0
}]

[node name="Tank" type="CharacterBody2D" groups=["tank"]]
script = ExtResource("1_2wvh0")
initial_body_rotation = 90
initial_barrel_rotation = 90
type = 6
speed = 100.0
health = 40

[node name="Body" type="Sprite2D" parent="."]
unique_name_in_owner = true
rotation = 1.5708
scale = Vector2(0.941176, 0.941177)
texture = ExtResource("2_utf6n")

[node name="BarrelSample" type="Sprite2D" parent="Body"]
unique_name_in_owner = true
position = Vector2(0.98024, 23.0919)
scale = Vector2(0.929688, 0.929687)
texture = ExtResource("3_1732e")

[node name="BarrelSample2" type="Sprite2D" parent="Body"]
unique_name_in_owner = true
position = Vector2(-14.1938, -43.4866)
scale = Vector2(0.929688, 0.929687)
texture = ExtResource("4_l7g60")
flip_v = true

[node name="BarrelSample3" type="Sprite2D" parent="Body"]
unique_name_in_owner = true
position = Vector2(10.2437, -43.4867)
scale = Vector2(0.929688, 0.929687)
texture = ExtResource("4_l7g60")
flip_h = true
flip_v = true

[node name="Barrel" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-14.0645, -10.7087)
rotation = 1.5708
scale = Vector2(0.875, 0.875)
texture = ExtResource("3_1732e")
centered = false
offset = Vector2(-0.421518, -12.9497)

[node name="Bullet" type="Sprite2D" parent="Barrel"]
unique_name_in_owner = true
visible = false
position = Vector2(-4.07578, -47.7561)
scale = Vector2(1.14286, 1.14286)
texture = ExtResource("4_4jf3y")
centered = false

[node name="Barrel2" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(21.9976, -13.8925)
rotation = 1.5708
scale = Vector2(0.875, 0.875)
texture = ExtResource("4_l7g60")
offset = Vector2(0.609999, -21.6355)
flip_v = true

[node name="Bullet2" type="Sprite2D" parent="Barrel2"]
unique_name_in_owner = true
visible = false
position = Vector2(-4.07579, -48.899)
scale = Vector2(1.14286, 1.14286)
texture = ExtResource("4_4jf3y")

[node name="Barrel3" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(22.665, 9.46718)
rotation = 1.5708
scale = Vector2(0.875, 0.875)
texture = ExtResource("4_l7g60")
offset = Vector2(0.198914, -20.8727)
flip_h = true
flip_v = true

[node name="Bullet3" type="Sprite2D" parent="Barrel3"]
unique_name_in_owner = true
visible = false
position = Vector2(3.92423, -48.899)
scale = Vector2(1.14286, 1.14286)
texture = ExtResource("4_4jf3y")

[node name="HitArea" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-2, -1)
shape = SubResource("RectangleShape2D_555gt")

[node name="Range" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
visible = false
shape = SubResource("CircleShape2D_6imrt")

[node name="Center" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
visible = false
shape = SubResource("CircleShape2D_nmod6")

[node name="Health" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -17.0
offset_top = -15.0
offset_right = 23.0
offset_bottom = 8.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_31mxh")
}

[node name="AnimationSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
rotation = 1.5708
scale = Vector2(0.941176, 0.941177)
sprite_frames = SubResource("SpriteFrames_tf25s")
animation = &"explosion"
frame = 4
frame_progress = 1.0

[connection signal="animation_finished" from="AnimationSprite" to="." method="_on_animation_sprite_animation_finished"]
